# operating-system-from-scratch

./: Cargo.toml  Readme.md  boot_in_qemu.sh
.cargo/: config.toml
src/: interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
