[package]
name = "operating-system-from-scratch"
version = "0.1.0"
edition = "2021"
authors = ["Bipin Oli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"


[profile.dev]
panic = "abort"


[profile.release]
panic = "abort"